--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "concurrently": "^5.0.0",
     "electron": "^6.0.12",
     "electron-packager": "^14.0.6",
+    "prop-types": "^15.7.2",
     "wait-on": "^3.3.0"
   },
   "scripts": {
