--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "node-sass": "^4.13.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
