--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "typr",
-  "name": "typr",
+  "short_name": "Moonpad",
+  "name": "Moonpad",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
