Add icon for macOS and update packaging script accordingly

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
-    "pack-osx": "yarn build && electron-packager . --plataform=darwin --out=./release-builds/mac --overwrite=true --prune=true --package-manager=yarn"
+    "pack-osx": "yarn build && electron-packager . --plataform=darwin --out=./release-builds/macOS --icon=./assets/moonpad.icns --overwrite=true --prune=true --package-manager=yarn"
   },
   "eslintConfig": {
     "extends": "react-app"
