--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "homepage": "./",
   "dependencies": {
     "electron-is-dev": "^1.1.0",
-    "lowdb": "^1.0.0"
-  },
-  "devDependencies": {
-    "react-scripts": "3.2.0",
-    "concurrently": "^5.0.0",
-    "electron": "^7.2.4",
-    "electron-packager": "^14.0.6",
-    "prop-types": "^15.7.2",
-    "wait-on": "^3.3.0",
-    "node-sass": "^4.13.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-redux": "^7.2.0",
+    "lowdb": "^1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "concurrently": "^5.0.0",
+    "electron": "^7.2.4",
+    "electron-packager": "^14.0.6",
+    "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
+    "wait-on": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
