--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "concurrently": "^5.0.0",
     "electron": "^7.2.4",
     "electron-packager": "^14.0.6",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "node-sass": "^4.13.1",
     "prettier": "2.8.3",
     "prop-types": "^15.7.2",
