Turn off linter rule 'default-param-last' (for now?)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,7 @@
   },
   "ignorePatterns": ["serviceWorker.js"],
   "plugins": ["react"],
-  "rules": {}
+  "rules": {
+    "default-param-last": "off"
+  }
 }
