...And some more linter fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
   "ignorePatterns": ["serviceWorker.js"],
   "plugins": ["react"],
   "rules": {
-    "default-param-last": "off"
+    "default-param-last": "off",
+    "import/prefer-default-export": "off"
   }
 }
