--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "./src/electron.js",
   "homepage": "./",
   "dependencies": {
+    "@types/jest": "^29.2.6",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "electron": "^7.2.4",
     "electron-is-dev": "^1.1.0",
     "lowdb": "^1.0.0",
@@ -15,7 +19,8 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
