--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/redux-logger": "^3.0.9",
     "electron": "^7.2.4",
     "electron-is-dev": "^1.1.0",
     "lowdb": "^1.0.0",
