--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
