--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
@@ -37,7 +38,6 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "2.8.3",
-    "sass": "^1.57.1",
     "wait-on": "^3.3.0"
   },
   "scripts": {
